adds header content and styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
   <body>
     <div class="container body-container">
       <header>
-        Header goes here
+        <div class="header-top-row">
+          <div class="logo-text">
+            <img id="logo-text" alt="St. Croix Sensory Logo text" src="css/imgs/logo-text.png">
+          </div>
+            <button type="button" class="btn btn-white btn-browse">Browse Courses</button>
+          <div class="logo-icons">
+            <img id="logo-icons" alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons.png">
+          </div>
+        </div>
+        <div class="header-bottom-row">
+          <div class="header-bottom-left">
+            <div class="icon-training">
+              <img id="training-icon" alt="Training Icon" src="css/imgs/Icon_Overall_Training.png">
+            </div>
+            <h2>Training</h2>
+          </div>
+          <div class="header-bottom-right">
+            <span class="welcome">Welcome, GUEST</span>
+            <button type="button" class="btn btn-red btn-login">LOGIN</button>
+          </div>
+        </div>
       </header>
       <div class=" container main-content" role="main">
         <div class="card">
@@ -23,20 +43,20 @@
           <div class="card-body">
             <div class="container card-column">
               <div class="card-subtitle">
-                <h2>ODOR SCHOOL</h2><span class="card-trademark">&#174;</span>
+                <h3>ODOR SCHOOL</h3><span class="card-trademark">&#174;</span>
               </div>
-              <button type="button" class="btn btn-card">Nasal Ranger Inspector</button>
-              <button type="button" class="btn btn-card">Odor Basics</button>
-              <button type="button" class="btn btn-card">Odor Management</button>
-              <button type="button" class="btn btn-card">Policy Development</button>
+              <button type="button" class="btn btn-red btn-card">Nasal Ranger Inspector</button>
+              <button type="button" class="btn btn-red btn-card">Odor Basics</button>
+              <button type="button" class="btn btn-red btn-card">Odor Management</button>
+              <button type="button" class="btn btn-red btn-card">Policy Development</button>
             </div>
             <div class="container card-column">
               <div class="card-subtitle">
-                <h2>Sensory Institute</h2><span class="card-trademark">&#8482;</span>
+                <h3>Sensory Institute</h3><span class="card-trademark">&#8482;</span>
               </div>
-              <button type="button" class="btn btn-card">Product Development</button>
-              <button type="button" class="btn btn-card">Descriptive Analysis</button>
-              <button type="button" class="btn btn-card">Guidance For Consumer Panels</button>
+              <button type="button" class="btn btn-red btn-card">Product Development</button>
+              <button type="button" class="btn btn-red btn-card">Descriptive Analysis</button>
+              <button type="button" class="btn btn-red btn-card">Guidance For Consumer Panels</button>
             </div>
           </div>
         </div>
