--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       <header>
         <div class="header-top-row">
           <div class="logo-text">
-            <img id="logo-text" alt="St. Croix Sensory Logo text" src="css/imgs/logo-text.png">
+            <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text.png">
           </div>
             <button type="button" class="btn btn-white btn-browse">Browse Courses</button>
           <div class="logo-icons">
-            <img id="logo-icons" alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons.png">
+            <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons.png">
           </div>
         </div>
         <div class="header-bottom-row">
           <div class="header-bottom-left">
             <div class="icon-training">
-              <img id="training-icon" alt="Training Icon" src="css/imgs/Icon_Overall_Training.png">
+              <img alt="Training Icon" src="css/imgs/Icon_Overall_Training.png">
             </div>
             <h2>Training</h2>
           </div>
@@ -35,7 +35,7 @@
           </div>
         </div>
       </header>
-      <div class=" container main-content" role="main">
+      <div class="container main-content" role="main">
         <div class="card">
           <div class="card-header">
               Welcome to St. Croix Sensory, Inc. Training
@@ -62,7 +62,19 @@
         </div>
       </div>
       <footer>
-        Footer goes here
+        <div class="container footer-container">
+          <div class="logo-footer">
+            <div class="logo-icons-footer">
+              <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons-black.png">
+            </div>
+            <div class="logo-text-footer">
+              <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text-black.png">
+            </div>
+          </div>
+          <div class="message-footer">
+            <span>St. Croix Sensory is ISO/ISE 17025-2005 Certified</span>
+          </div>
+      </div>
       </footer>
     </div>
 
