--- a/course-detail.html
+++ b/course-detail.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>St. Croix Sensory, Inc. Training</title>
+    <title>St. Croix Sensory, Inc. Course Detail</title>
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" />
   	<link rel="stylesheet" href="./css/style.css" />
 
@@ -32,15 +32,15 @@
               <h2>Training</h2>
             </div>
             <div class="header-bottom-right">
-              <span class="welcome">Welcome, GUEST</span>
+              <span class="welcome">Welcome, Ann Learner</span>
               <div class="dropdown">
-                <button type="button" class="btn btn-red btn-login" data-toggle="collapse" data-target="#login-form" aria-expanded="false" aria-controls="login-form">LOGIN</button>
+                <button type="button" class="btn btn-red btn-logout">LOGOUT</button>
               </div>
             </div>
           </div>
         </div>
       </header>
-      <div class="container main-content-main-page" role="main">
+      <div class="container main-content-course-detail" role="main">
         <div class="collapse" id="login-form">
           <div  class="login-form-show">
             <form>
@@ -52,74 +52,74 @@
             </form>
           </div>
         </div>
-        <div class="card card-main-page">
+        <div class="card card-course-detail">
           <div class="card-header card-header-large">
               Welcome to St. Croix Sensory, Inc. Training
           </div>
-          <div class="card-body card-body-main-page">
-            <div class="container card-column">
-              <div class="card-subtitle">
-                <h3>ODOR SCHOOL</h3><span class="card-trademark">&#174;</span>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn btn-red btn-card">Nasal Ranger Inspector</button>
-                <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
-                  </div>
+          <div class="card-body card-body-course-detail">
+            <div class="card-subtitle-wrapper">
+              <div class="card-subtitle-course-detail">
+                <div class="logo-nasal-ranger">
+                  <img alt="Nasal Ranger Logo" src="css/imgs/nasal_ranger_logo.png">
                 </div>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn btn-red btn-card">Odor Basics</button>
-                <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
-                  </div>
-                </div>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn btn-red btn-card">Odor Management</button>
-                <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
-                  </div>
-                </div>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn btn-red btn-card">Policy Development</button>
-                <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
-                  </div>
-                </div>
+                <h3>Nasal Ranger Inspector</h3>
               </div>
             </div>
-            <div class="container card-column">
-              <div class="card-subtitle">
-                <h3>Sensory Institute</h3><span class="card-trademark">&#8482;</span>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn btn-red btn-card">Product Development</button>
-                <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
+            <div class="card-columns-wrapper">
+              <div class="card-column-left">
+                <div class="card card-course-description">
+                  <div class="card-header card-header-small">
+                      Course Description
+                  </div>
+                  <div class=" card-body card-body-course-description">
+                    <span>
+                      This course prepares you to make odor inspections, record pertinent information,
+                      and report the data to management officials.
+                    </span>
+                  </div>
+                </div>
+                <div class="card card-course-contents">
+                  <div class="card-header card-header-small">
+                      Course Contents
+                  </div>
+                  <div class="card-body card-body-course-contents">
+                    <div class="card-list-wrapper">
+                      <ul>
+                        <li>When smell becomes a nuisance</li>
+                        <li>The ability of your nose to detect smells</li>
+                        <li>Describing and categorizing odors</li>
+                        <li>Quantifying odor strength</li>
+                        <li>Gathering odor data for decision making</li>
+                        <li>Upkeep of the Nasal Ranger</li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="button-group">
-                <button type="button" class="btn btn-red btn-card">Descriptive Analysis</button>
-                <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
+              <div class="card-column-right">
+                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">
+                  <div class="btn-icon-wrapper">
+                    <img alt="Delivery Online Icon" src="css/imgs/Delivery_Online.png">
                   </div>
+                  <span class="btn-course-text">
+                    Online Course
+                  </span>
                 </div>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn btn-red btn-card">Guidance for Consumer Panels</button>
-                <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
+                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">
+                  <div class="btn-icon-wrapper">
+                    <img alt="Delivery Webinar" src="css/imgs/Delivery_Webinar.png">
                   </div>
+                  <span class="btn-course-text">
+                    Webinar
+                  </span>
+                </div>
+                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">
+                  <div class="btn-icon-wrapper">
+                    <img alt="Delivery Onsite Icon" src="css/imgs/Delivery_Onsite.png">
+                  </div>
+                  <span class="btn-course-text">
+                    Onsite Training
+                  </span>
                 </div>
               </div>
             </div>
