adds expandable course buttons

--- a/course-detail.html
+++ b/course-detail.html
@@ -97,15 +97,19 @@
                 </div>
               </div>
               <div class="card-column-right">
-                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">
-                  <div class="btn-icon-wrapper">
-                    <img alt="Delivery Online Icon" src="css/imgs/Delivery_Online.png">
+                <div class="expandable-button-wrapper">
+                  <div class="btn btn-white btn-course btn-course-top" data-toggle="collapse" data-target="#online-delivery-collapse" aria-expanded="true" aria-controls="online-delivery-collapse">
+                    <div class="btn-icon-wrapper">
+                      <img alt="Delivery Online Icon" src="css/imgs/Delivery_Online.png">
+                    </div>
+                    <span class="btn-course-text">
+                      Online Course
+                    </span>
                   </div>
-                  <span class="btn-course-text">
-                    Online Course
-                  </span>
+                  <div id="online-delivery-collapse" class="expandable-button-collapse">
+                  </div>
                 </div>
-                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">
+                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#webinar-collapse" aria-expanded="true" aria-controls="webinar-collapse">
                   <div class="btn-icon-wrapper">
                     <img alt="Delivery Webinar" src="css/imgs/Delivery_Webinar.png">
                   </div>
@@ -113,7 +117,7 @@
                     Webinar
                   </span>
                 </div>
-                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">
+                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#onsite-training-collapse" aria-expanded="true" aria-controls="onsite-training-collapse">
                   <div class="btn-icon-wrapper">
                     <img alt="Delivery Onsite Icon" src="css/imgs/Delivery_Onsite.png">
                   </div>
