move imgs folder and update paths

--- a/course-detail.html
+++ b/course-detail.html
@@ -17,17 +17,17 @@
         <div class="container header-container">
           <div class="header-top-row">
             <div class="logo-text">
-              <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text.png">
+              <img alt="St. Croix Sensory Logo text" src="imgs/logo-text.png">
             </div>
               <button type="button" class="btn btn-white btn-browse">Browse Courses</button>
             <div class="logo-icons">
-              <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons.png">
+              <img alt="St. Croix Sensory Logo icons" src="imgs/logo-icons.png">
             </div>
           </div>
           <div class="header-bottom-row">
             <div class="header-bottom-left">
               <div class="icon-training">
-                <img alt="Training Icon" src="css/imgs/Icon_Overall_Training.png">
+                <img alt="Training Icon" src="imgs/Icon_Overall_Training.png">
               </div>
               <h2>Training</h2>
             </div>
@@ -60,7 +60,7 @@
             <div class="card-subtitle-wrapper">
               <div class="card-subtitle-course-detail">
                 <div class="logo-nasal-ranger">
-                  <img alt="Nasal Ranger Logo" src="css/imgs/nasal_ranger_logo.png">
+                  <img alt="Nasal Ranger Logo" src="imgs/nasal_ranger_logo.png">
                 </div>
                 <h3>Nasal Ranger Inspector</h3>
               </div>
@@ -100,7 +100,7 @@
                 <div class="expandable-button-wrapper">
                   <div class="btn btn-white btn-course btn-course-top" data-toggle="collapse" data-target="#online-delivery-collapse" aria-expanded="true" aria-controls="online-delivery-collapse">
                     <div class="btn-icon-wrapper">
-                      <img alt="Delivery Online Icon" src="css/imgs/Delivery_Online.png">
+                      <img alt="Delivery Online Icon" src="imgs/Delivery_Online.png">
                     </div>
                     <span class="btn-course-text">
                       Online Course
@@ -111,7 +111,7 @@
                 </div>
                 <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#webinar-collapse" aria-expanded="true" aria-controls="webinar-collapse">
                   <div class="btn-icon-wrapper">
-                    <img alt="Delivery Webinar" src="css/imgs/Delivery_Webinar.png">
+                    <img alt="Delivery Webinar" src="imgs/Delivery_Webinar.png">
                   </div>
                   <span class="btn-course-text">
                     Webinar
@@ -119,7 +119,7 @@
                 </div>
                 <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#onsite-training-collapse" aria-expanded="true" aria-controls="onsite-training-collapse">
                   <div class="btn-icon-wrapper">
-                    <img alt="Delivery Onsite Icon" src="css/imgs/Delivery_Onsite.png">
+                    <img alt="Delivery Onsite Icon" src="imgs/Delivery_Onsite.png">
                   </div>
                   <span class="btn-course-text">
                     Onsite Training
@@ -134,10 +134,10 @@
         <div class="container footer-container">
           <div class="logo-footer">
             <div class="logo-icons-footer">
-              <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons-black.png">
+              <img alt="St. Croix Sensory Logo icons" src="imgs/logo-icons-black.png">
             </div>
             <div class="logo-text-footer">
-              <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text-black.png">
+              <img alt="St. Croix Sensory Logo text" src="imgs/logo-text-black.png">
             </div>
           </div>
           <div class="message-footer">
