--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <div class="container header-container">
           <div class="header-top-row">
             <div class="logo-text">
-              <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text.png">
+              <img alt="St. Croix Sensory Logo text" src="imgs/logo-text.png">
             </div>
               <button type="button" class="btn btn-white btn-browse">Browse Courses</button>
             <div class="logo-icons">
-              <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons.png">
+              <img alt="St. Croix Sensory Logo icons" src="imgs/logo-icons.png">
             </div>
           </div>
           <div class="header-bottom-row">
             <div class="header-bottom-left">
               <div class="icon-training">
-                <img alt="Training Icon" src="css/imgs/Icon_Overall_Training.png">
+                <img alt="Training Icon" src="imgs/Icon_Overall_Training.png">
               </div>
               <h2>Training</h2>
             </div>
@@ -130,10 +130,10 @@
         <div class="container footer-container">
           <div class="logo-footer">
             <div class="logo-icons-footer">
-              <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons-black.png">
+              <img alt="St. Croix Sensory Logo icons" src="imgs/logo-icons-black.png">
             </div>
             <div class="logo-text-footer">
-              <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text-black.png">
+              <img alt="St. Croix Sensory Logo text" src="imgs/logo-text-black.png">
             </div>
           </div>
           <div class="message-footer">
