--- a/course-detail.html
+++ b/course-detail.html
@@ -33,6 +33,7 @@
             </div>
             <div class="header-bottom-right">
               <span class="welcome">Welcome, Ann Learner</span>
+              <button type="button" class="btn btn-red btn-student-center">Student Center</button>
               <div class="dropdown">
                 <button type="button" class="btn btn-red btn-logout">LOGOUT</button>
               </div>
@@ -96,34 +97,58 @@
                   </div>
                 </div>
               </div>
-              <div class="card-column-right">
-                <div class="expandable-button-wrapper">
-                  <div class="btn btn-white btn-course btn-course-top" data-toggle="collapse" data-target="#online-delivery-collapse" aria-expanded="true" aria-controls="online-delivery-collapse">
+              <div id="accordion">
+                <div class="card-column-right">
+                  <div class="expandable-button-wrapper">
+                    <div class="btn btn-white btn-course btn-course-top" data-toggle="collapse" data-parent="#accordion" data-target="#online-delivery-collapse" aria-expanded="false" aria-controls="online-delivery-collapse">
+                      <div class="btn-icon-wrapper">
+                        <img alt="Delivery Online Icon" src="css/imgs/Delivery_Online.png">
+                      </div>
+                      <span class="btn-course-text">
+                        Online Course
+                      </span>
+                    </div>
+                    <div class="collapse" id="online-delivery-collapse">
+                      <div class="expandable-button-collapse">
+                        <span class="course-detail-text">
+                          This is a brief sentence about online course offering.
+                        </span>
+                        <button type="button" class="btn btn-red btn-course-detail">REGISTER</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="btn btn-white btn-course" data-toggle="collapse" data-parent="#accordion" data-target="#webinar-collapse" aria-expanded="false" aria-controls="webinar-collapse">
                     <div class="btn-icon-wrapper">
-                      <img alt="Delivery Online Icon" src="css/imgs/Delivery_Online.png">
+                      <img alt="Delivery Webinar" src="css/imgs/Delivery_Webinar.png">
                     </div>
                     <span class="btn-course-text">
-                      Online Course
+                      Webinar
                     </span>
                   </div>
-                  <div id="online-delivery-collapse" class="expandable-button-collapse">
+                  <div class="collapse" id="webinar-collapse">
+                    <div class="expandable-button-collapse">
+                      <span class="course-detail-text">
+                        This is a brief sentence about webinar offering.
+                      </span>
+                      <button type="button" class="btn btn-red btn-course-detail">REGISTER</button>
+                    </div>
                   </div>
-                </div>
-                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#webinar-collapse" aria-expanded="true" aria-controls="webinar-collapse">
-                  <div class="btn-icon-wrapper">
-                    <img alt="Delivery Webinar" src="css/imgs/Delivery_Webinar.png">
+                  <div class="btn btn-white btn-course" data-toggle="collapse" data-parent="#accordion" data-target="#onsite-training-collapse" aria-expanded="false" aria-controls="onsite-training-collapse">
+                    <div class="btn-icon-wrapper">
+                      <img alt="Delivery Onsite Icon" src="css/imgs/Delivery_Onsite.png">
+                    </div>
+                    <span class="btn-course-text">
+                      Onsite Training
+                    </span>
                   </div>
-                  <span class="btn-course-text">
-                    Webinar
-                  </span>
-                </div>
-                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#onsite-training-collapse" aria-expanded="true" aria-controls="onsite-training-collapse">
-                  <div class="btn-icon-wrapper">
-                    <img alt="Delivery Onsite Icon" src="css/imgs/Delivery_Onsite.png">
+                  <div class="collapse" id="onsite-training-collapse">
+                    <div class="expandable-button-collapse">
+                      <span class="course-detail-text">
+                        This is a brief sentence about onsite training offering.
+                      </span>
+                      <button type="button" class="btn btn-red btn-course-detail">REGISTER</button>
+                    </div>
                   </div>
-                  <span class="btn-course-text">
-                    Onsite Training
-                  </span>
                 </div>
               </div>
             </div>
