--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo-text">
               <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text.png">
             </div>
-              <button type="button" class="btn btn-white btn-browse">Browse Courses</button>
+              <button type="button" class="btn btn-white btn-browse clickable">Browse Courses</button>
             <div class="logo-icons">
               <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons.png">
             </div>
@@ -34,7 +34,7 @@
             <div class="header-bottom-right">
               <span class="welcome">Welcome, GUEST</span>
               <div class="dropdown">
-                <button type="button" class="btn btn-red btn-login" data-toggle="collapse" data-target="#login-form" aria-expanded="false" aria-controls="login-form">LOGIN</button>
+                <button type="button" class="btn btn-red btn-login clickable" data-toggle="collapse" data-target="#login-form" aria-expanded="false" aria-controls="login-form">LOGIN</button>
               </div>
             </div>
           </div>
@@ -47,7 +47,7 @@
               <div class="login-wrapper">
                 <input type="username" class="form-control input-login" aria-describedby="username" placeholder="Returning User Name">
                 <input type="password" class="form-control input-login"  aria-describedby="password" placeholder="Password">
-                <button type="button" class="btn btn-red btn-login-dropdown" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">LOGIN</button>
+                <button type="button" class="btn btn-red btn-login-dropdown clickable" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">LOGIN</button>
               </div>
             </form>
           </div>
