tidy html. alter focus and hover effects

--- a/course-detail.html
+++ b/course-detail.html
@@ -19,7 +19,7 @@
             <div class="logo-text">
               <img alt="St. Croix Sensory Logo text" src="css/imgs/logo-text.png">
             </div>
-              <button type="button" class="btn btn-white btn-browse clickable">Browse Courses</button>
+            <button class="btn btn-white btn-browse">Browse Courses</button>
             <div class="logo-icons">
               <img alt="St. Croix Sensory Logo icons" src="css/imgs/logo-icons.png">
             </div>
@@ -34,7 +34,7 @@
             <div class="header-bottom-right">
               <span class="welcome">Welcome, Ann Learner</span>
               <div class="dropdown">
-                <button type="button" class="btn btn-red btn-logout clickable">LOGOUT</button>
+                <button class="btn btn-red btn-logout">LOGOUT</button>
               </div>
             </div>
           </div>
@@ -47,7 +47,8 @@
               <div class="login-wrapper">
                 <input type="username" class="form-control input-login" aria-describedby="username" placeholder="Returning User Name">
                 <input type="password" class="form-control input-login"  aria-describedby="password" placeholder="Password">
-                <button type="button" class="btn btn-red btn-login-dropdown clickable" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">LOGIN</button>
+                <button class="btn btn-red btn-login-dropdown" data-toggle="collapse" data-target="#login-form"
+                        aria-expanded="true" aria-controls="login-form">LOGIN</button>
               </div>
             </form>
           </div>
@@ -71,7 +72,7 @@
                   <div class="card-header card-header-small">
                       Course Description
                   </div>
-                  <div class=" card-body card-body-course-description">
+                  <div class="card-body card-body-course-description">
                     <span>
                       This course prepares you to make odor inspections, record pertinent information,
                       and report the data to management officials.
@@ -98,7 +99,8 @@
               </div>
               <div class="card-column-right">
                 <div class="expandable-button-wrapper">
-                  <div class="btn btn-white btn-course btn-course-top" data-toggle="collapse" data-target="#online-delivery-collapse" aria-expanded="true" aria-controls="online-delivery-collapse">
+                  <div  role="button" class="btn btn-white btn-course btn-course-top" data-toggle="collapse" data-target="#online-delivery-collapse"
+                        aria-expanded="true" aria-controls="online-delivery-collapse">
                     <div class="btn-icon-wrapper">
                       <img alt="Delivery Online Icon" src="css/imgs/Delivery_Online.png">
                     </div>
@@ -109,7 +111,8 @@
                   <div id="online-delivery-collapse" class="expandable-button-collapse">
                   </div>
                 </div>
-                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#webinar-collapse" aria-expanded="true" aria-controls="webinar-collapse">
+                <div  role="button" class="btn btn-white btn-course" data-toggle="collapse" data-target="#webinar-collapse"
+                      aria-expanded="true" aria-controls="webinar-collapse">
                   <div class="btn-icon-wrapper">
                     <img alt="Delivery Webinar" src="css/imgs/Delivery_Webinar.png">
                   </div>
@@ -117,7 +120,8 @@
                     Webinar
                   </span>
                 </div>
-                <div class="btn btn-white btn-course" data-toggle="collapse" data-target="#onsite-training-collapse" aria-expanded="true" aria-controls="onsite-training-collapse">
+                <div  role="button" class="btn btn-white btn-course" data-toggle="collapse" data-target="#onsite-training-collapse"
+                      aria-expanded="true" aria-controls="onsite-training-collapse">
                   <div class="btn-icon-wrapper">
                     <img alt="Delivery Onsite Icon" src="css/imgs/Delivery_Onsite.png">
                   </div>
