clean up some styling and begin payment card

--- a/course-detail.html
+++ b/course-detail.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </header>
-      <div class="container main-content-course-detail odor-school" role="main">
+      <div class="container card-container course-detail odor-school" role="main">
         <div class="card card-course-detail">
           <div class="card-header card-header-large">
               Welcome to St. Croix Sensory, Inc. Training
