--- a/webinar-onsite.html
+++ b/webinar-onsite.html
@@ -14,8 +14,8 @@
   <body>
     <div class="container body-container">
       <header>
-        <div class="container header-container">
-          <div class="header-top-row">
+        <div class="container flex-column-space-between header-container">
+          <div class="flex-row-space-between header-top-row">
             <div class="logo-text">
               <img alt="St. Croix Sensory Logo text" src="imgs/logo-text.png">
             </div>
