refactors flexbox to standardize classes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <div class="container body-container">
       <header>
-        <div class="container flex-column-space-between header-container">
-          <div class="flex-row-space-between header-top-row">
+        <div class="container flex-col-spacebetween header-container">
+          <div class="flex-row-spacebetween header-top-row">
             <div class="logo-text">
               <img alt="St. Croix Sensory Logo text" src="imgs/logo-text.png">
             </div>
@@ -24,14 +24,14 @@
               <img alt="St. Croix Sensory Logo icons" src="imgs/logo-icons.png">
             </div>
           </div>
-          <div class="header-bottom-row">
-            <div class="header-bottom-left">
+          <div class="flex-row-spacebetween">
+            <div class="flex-row-spacebetween-center header-bottom-left">
               <div class="icon-training">
                 <img alt="Training Icon" src="imgs/Icon_Overall_Training.png">
               </div>
               <h2>Training</h2>
             </div>
-            <div class="header-bottom-right">
+            <div class="flex-row-spacebetween-end">
               <span class="welcome">Welcome, GUEST</span>
               <div class="dropdown">
                 <button type="button" class="btn btn-red btn-login" data-toggle="collapse" data-target="#login-form"
@@ -41,11 +41,11 @@
           </div>
         </div>
       </header>
-      <div class="container main-content-main-page odor-school" role="main">
+      <div class="container flex-col-start-center main-content-main-page odor-school" role="main">
         <div class="collapse" id="login-form">
-          <div  class="login-form-show">
+          <div  class="flex-row-end">
             <form>
-              <div class="login-wrapper">
+              <div class="flex-row-spacearound-center login-wrapper">
                 <input class="form-control input-login" aria-describedby="username" placeholder="Returning User Name">
                 <input class="form-control input-login"  aria-describedby="password" placeholder="Password">
                 <button type="submit" class="btn btn-red btn-login-dropdown" data-toggle="collapse" data-target="#login-form" aria-expanded="true" aria-controls="login-form">LOGIN</button>
@@ -54,15 +54,15 @@
           </div>
         </div>
         <div class="card card-main-page">
-          <div class="card-header card-header-large">
+          <div class="card-header flex-row-spacearound-center">
               Welcome to St. Croix Sensory, Inc. Training
           </div>
-          <div class="card-body card-body-main-page">
-            <div class="container card-column">
-              <div class="card-subtitle">
+          <div class="card-body flex-row-spacearound">
+            <div class="container flex-col-start-center">
+              <div class="flex-row-spacearound-start">
                 <h3>ODOR SCHOOL</h3><span class="card-trademark">&#174;</span>
               </div>
-              <div class="button-group">
+              <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Nasal Ranger Inspector</button>
                 <div class="expandable collapsed-button">
                   <div class="expandable-text-wrapper">
@@ -70,7 +70,7 @@
                   </div>
                 </div>
               </div>
-              <div class="button-group">
+              <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Odor Basics</button>
                 <div class="expandable collapsed-button">
                   <div class="expandable-text-wrapper">
@@ -78,7 +78,7 @@
                   </div>
                 </div>
               </div>
-              <div class="button-group">
+              <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Odor Management</button>
                 <div class="expandable collapsed-button">
                   <div class="expandable-text-wrapper">
@@ -86,7 +86,7 @@
                   </div>
                 </div>
               </div>
-              <div class="button-group">
+              <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Policy Development</button>
                 <div class="expandable collapsed-button">
                   <div class="expandable-text-wrapper">
@@ -95,11 +95,11 @@
                 </div>
               </div>
             </div>
-            <div class="container card-column">
-              <div class="card-subtitle">
+            <div class="container flex-col-start-center">
+              <div class="flex-row-spacearound-start">
                 <h3>Sensory Institute</h3><span class="card-trademark">&#8482;</span>
               </div>
-              <div class="button-group">
+              <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Product Development</button>
                 <div class="expandable collapsed-button">
                   <div class="expandable-text-wrapper">
@@ -107,7 +107,7 @@
                   </div>
                 </div>
               </div>
-              <div class="button-group">
+              <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Descriptive Analysis</button>
                 <div class="expandable collapsed-button">
                   <div class="expandable-text-wrapper">
@@ -115,7 +115,7 @@
                   </div>
                 </div>
               </div>
-              <div class="button-group">
+              <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Guidance for Consumer Panels</button>
                 <div class="expandable collapsed-button">
                   <div class="expandable-text-wrapper">
@@ -128,7 +128,7 @@
         </div>
       </div>
       <footer>
-        <div class="container footer-container">
+        <div class="container flex-col-spacearound-center">
           <div class="logo-footer">
             <div class="logo-icons-footer">
               <img alt="St. Croix Sensory Logo icons" src="imgs/logo-icons-black.png">
