--- a/payment.html
+++ b/payment.html
@@ -51,7 +51,7 @@
               <h3>Nasal Ranger Inspector</h3>
             </div>
 
-              <div class=" card-row">
+              <div class="flex-row-spacebetween card-row">
                 <div class="card border-red left-card">
                   <div class="card-header flex-row-start">
                     Course Registration
