adds background images and text to expandable buttons

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Nasal Ranger Inspector</button>
                 <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
+                  <div class="expandable-text-wrapper exp-txt-wrp-1">
                     <span>The science and practice of odor inspections</span>
                   </div>
                 </div>
@@ -73,24 +73,24 @@
               <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Odor Basics</button>
                 <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
+                  <div class="expandable-text-wrapper exp-txt-wrp-2">
+                    <span>Sampling, evaluations, and decision-making</span>
                   </div>
                 </div>
               </div>
               <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Odor Management</button>
                 <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
+                  <div class="expandable-text-wrapper exp-txt-wrp-3">
+                    <span>Technology and expectations</span>
                   </div>
                 </div>
               </div>
               <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Policy Development</button>
                 <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
-                    <span>The science and practice of odor inspections</span>
+                  <div class="expandable-text-wrapper exp-txt-wrp-4">
+                    <span>Successful odor laws and zoning</span>
                   </div>
                 </div>
               </div>
@@ -102,7 +102,7 @@
               <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Product Development</button>
                 <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
+                  <div class="expandable-text-wrapper exp-txt-wrp-1">
                     <span>The science and practice of odor inspections</span>
                   </div>
                 </div>
@@ -110,7 +110,7 @@
               <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Descriptive Analysis</button>
                 <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
+                  <div class="expandable-text-wrapper exp-txt-wrp-1">
                     <span>The science and practice of odor inspections</span>
                   </div>
                 </div>
@@ -118,7 +118,7 @@
               <div class="flex-col-start-center">
                 <button type="button" class="btn btn-red btn-card">Guidance for Consumer Panels</button>
                 <div class="expandable collapsed-button">
-                  <div class="expandable-text-wrapper">
+                  <div class="expandable-text-wrapper exp-txt-wrp-1">
                     <span>The science and practice of odor inspections</span>
                   </div>
                 </div>
