--- a/payment.html
+++ b/payment.html
@@ -72,13 +72,13 @@
               <h4>Payment options:</h4>
                 <ul class="nav nav-tabs" id="payment-options" role="tablist">
                   <li class="nav-item">
-                    <a class="nav-link active" id="visa-mc-tab" data-toggle="tab" href="#visa-mc" role="tab" aria-controls="visa-mc" aria-selected="true">Visa / MC</a>
+                    <a class="nav-link active btn-red" id="visa-mc-tab" data-toggle="tab" href="#visa-mc" role="tab" aria-controls="visa-mc" aria-selected="true">Visa / MC</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="paypal-tab" data-toggle="tab" href="#paypal" role="tab" aria-controls="paypal" aria-selected="false">PayPal</a>
+                    <a class="nav-link btn-red" id="paypal-tab" data-toggle="tab" href="#paypal" role="tab" aria-controls="paypal" aria-selected="false">PayPal</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="access-code-tab" data-toggle="tab" href="#access-code" role="tab" aria-controls="access-code" aria-selected="false">Access Code</a>
+                    <a class="nav-link btn-red" id="access-code-tab" data-toggle="tab" href="#access-code" role="tab" aria-controls="access-code" aria-selected="false">Access Code</a>
                   </li>
                 </ul>
 
@@ -118,16 +118,46 @@
                   </div>
 
                   <div class="tab-pane" id="paypal" role="tabpanel" aria-labelledby="paypal-tab">
-                    2
+                    <form>
+                      <div class="card-columns-wrapper">
+                        <div class="card-column-left">
+                          <div class="form-info-container">
+                            <img class="form-info" alt="PayPal Logo" src="imgs/Payment_PayPal.png">
+                            <p class="form-info">If you already have a PayPal account, please enter your PayPal credentials below.</p>
+                          </div>
+                          <input class="form-control input-registration" aria-describedby="Email Address" placeholder="Email Address">
+                          <input class="form-control input-registration bottom-field-row" aria-describedby="Password" placeholder="Password">
+                        </div>
+                        <div class="card-column-right-bottom">
+                          <button type="submit" class="btn btn-red btn-registration">Submit</button>
+                        </div>
+                      </div>
+                    </form>
                   </div>
                   <div class="tab-pane" id="access-code" role="tabpanel" aria-labelledby="access-code-tab">
-                    3
+                    <form>
+                      <div class="card-columns-wrapper">
+                        <div class="card-column-left">
+                          <div class="form-info-container">
+                            <img class="form-info" alt="Access Code" src="imgs/Payment_AccessCode.png">
+                            <p class="form-info">If your organization or employer has prepaid for this course and has provided an access code, please enter your access code below.</p>
+                          </div>
+                          <input class="form-control input-registration bottom-field-row" aria-describedby="Access Code" placeholder="Access Code">
+                        </div>
+                        <div class="card-column-right-bottom">
+                          <button type="submit" class="btn btn-red btn-registration">Submit</button>
+                        </div>
+                      </div>
+                    </form>
                   </div>
                 </div>
 
 
 
               
+            </div>
+            <div class="card-footer">
+              <p>Questions about registration? <a href="#">Contact us</a></p>
             </div>
           </div>
         </div>
